# bdd-project

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  populate.py  pyproject.toml  requirements.txt
adminer/: Dockerfile  docker-compose.yml
adminer/tns/: tnsnames.ora
db/: __init__.py  manager.py  models.py
oracle/: docker-compose.yml
postgres/: docker-compose.yml
requests/: 01_count_groupes.sql  requests.sql
scripts/: execute_requests.py  init_oracle.sh  populate.py  reset_db.py
