[project]
name = "bdd-project"
version = "0.1.0"
description = "Festival DB comparison: Oracle vs PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.44",
    "psycopg[binary]>=3.2.3",
    "oracledb>=2.5.0",
    "python-dotenv>=1.0.1",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.11",
    "faker>=37.12.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
]


[tool.ruff]
# Configure Ruff (linter + import sorter). The formatter is run via pre-commit.
# target-version can help rule applicability; adjust if needed.
target-version = "py310"

[tool.ruff.lint]
# Enable core checks and import sorting (isort-compatible).
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Autoriser l'import non en tête de fichier dans ce script (nécessaire pour sys.path)
"scripts/execute_requests.py" = ["E402"]

[tool.ruff.lint.isort]
# Treat local packages as first-party to group imports correctly.
known-first-party = ["db"]
# Merge multiple "as" imports from the same module.
combine-as-imports = true
